test/files/neg/t13055.check
t13055.scala:15: error: missing argument list for method forAll in object Main
with overloaded members in Main.type
  [A1, P](f: A1 => P)(implicit p: P => Main.Prop): Main.Prop
  [T1, P](g: Main.Gen[T1])(f: T1 => P)(implicit p: P => Main.Prop): Main.Prop
Unapplied methods are only converted to functions when a function type is expected.
Use -Xsource-features:eta-expand-always to convert even if the expected type is not a function type.
You can make this conversion explicit by writing `forAll _` or `forAll(_)(_)(_)` instead of `forAll`.
  def what() = forAll {
                      ^
1 error
